--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
    "devDependencies": {
       "@types/react": "^19.0.2",
       "@types/react-dom": "^19.0.2",
+      "makepack": "^1.7.12",
       "react": "^19.0.0",
       "react-dom": "^19.0.0",
-      "typescript": "^4.4.2",
-      "makepack": "^1.7.12"
+      "typescript": "^4.4.2"
    },
    "exports": {
       ".": {
