--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
    "name": "xanv",
-   "version": "1.1.5",
+   "version": "1.1.6",
    "type": "module",
    "types": "./index.d.ts",
    "main": "./index.js",
@@ -34,6 +34,6 @@
    },
    "repository": {
       "type": "git",
-      "url": "https://github.com/devnax/youid.git"
+      "url": "https://github.com/devnax/xanv.git"
    }
 }
